--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,9 +2,7 @@
 @import url("https://unpkg.com/leaflet@1.5.1/dist/leaflet.css");
 
 .leaflet-container {
-  margin: 80px auto;
-  height: 500px;
+  height: 100vh;
   z-index: 0;
-  border: 2px solid #333;
   overflow: hidden;
 }
