--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,7 +26,7 @@
 .leafletLine {
   position: absolute;
   width: 2px;
-  height: 90%;
+  height: 100%;
   background-color: black;
   left: 10px;
   bottom: 12px;
@@ -39,4 +39,9 @@
   padding: 3px;
   background: black;
   border-radius: 50%;
+  z-index: 25;
+}
+
+.leaflet-popup-content p {
+  margin: 0;
 }
