--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,3 +39,9 @@
 .leaflet-popup-content p {
   margin: 0;
 }
+
+.CardShadowHover:hover {
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+    rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  transition: 250ms;
+}
