--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,13 +15,14 @@
 .leaflet-popup-content-wrapper {
   padding-top: 0;
   border-radius: 15px;
+  background-color: #1f1b23;
 }
 
 .leafletLine {
   position: absolute;
   width: 2px;
   height: 100%;
-  background-color: black;
+  background-color: #ed9986;
   left: 10px;
   bottom: 12px;
 }
